# superbot-plugin-hello

./: README.md  pyproject.toml  substrate.config.json
.github/workflows/: merge-on-green.yml
docs/: _merge_verification_2026-07-15.md
docs/audits/: 2026-07-13-fleet-cleanup-audit.md
superbot_plugin_hello/: __init__.py  manifest.py
tests/: test_manifest.py
